🚀 Release v0.0.2: Enhanced cross-platform compatibility and powerful demo
✨ Major Features Added:
- 🌐 Full Node.js and browser compatibility
- 🏠 House systems calculator (8 different systems)
- 📐 Planetary aspects analysis with orb control
- 🔧 Interactive API explorer for testing functions
- 📊 Visual astrological charts (wheel, linear, aspect grid)
- ⚡ Enhanced demo with modern responsive UI

🔧 Technical Improvements:
- Fixed WebAssembly loading in Node.js environments
- Added proper environment detection for cross-platform support
- Enhanced error handling and validation
- Added comprehensive documentation and usage examples
- Fixed browser process.argv errors in examples

📚 Documentation Updates:
- Added live demo at https://prolaxu.github.io/swiss-wasm/examples/demo.html
- Enhanced README with cross-platform usage instructions
- Added framework-specific examples (Vue.js, React, Node.js)
- Added troubleshooting guide and best practices
- Added CDN usage examples

🎯 Ready for Production:
- Professional-grade demo showcasing all features
- Comprehensive test coverage
- Full TypeScript support
- Cross-platform compatibility verified

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "swisseph-wasm",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "High-precision Swiss Ephemeris WebAssembly library for astronomical calculations in JavaScript",
   "type": "module",
   "main": "src/swisseph.js",
@@ -53,12 +53,12 @@
   "license": "GPL-3.0-or-later",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/prolaxu/swisseph-wasm.git"
+    "url": "git+https://github.com/prolaxu/swiss-wasm.git"
   },
   "bugs": {
-    "url": "https://github.com/prolaxu/swisseph-wasm/issues"
+    "url": "https://github.com/prolaxu/swiss-wasm/issues"
   },
-  "homepage": "https://github.com/prolaxu/swisseph-wasm#readme",
+  "homepage": "https://github.com/prolaxu/swiss-wasm#readme",
   "engines": {
     "node": ">=14.0.0"
   },
